# koppeln

./: .gitignore  Cargo.toml  Dockerfile  Dockerfile.debian  LICENSE  Makefile.toml  README  README.md  test.query
.github/workflows/: ci.yml  main.yml  rust.yml
.tmp/: config.toml
config/: development.toml  production.toml  test.toml
debian/: config.toml  koppeln.service
e2e-tests/: Cargo.toml
e2e-tests/src/: lib.rs  linux_containers.rs
e2e-tests/tests/: e2e.rs  lxc.rs
e2e_tests/: .gitignore  Cargo.toml
e2e_tests/src/: drill.rs  lib.rs
e2e_tests/tests/: e2e.rs
lxc_testcontainers/: Cargo.toml
lxc_testcontainers/src/: core.rs  lib.rs
lxc_testcontainers/tests/: lxc.rs
src/: config.rs  dns.rs  lib.rs  main.rs  parser.rs  settings.rs  storage.rs  web.rs
src/dns/: codec.rs  request.rs  response.rs  server.rs
tests/: dns.rs  dns_server.rs  settings.rs
