[package]
name = "koppeln"
version = "0.1.0"
authors = ["Hendrik Kunert <>"]
edition = "2018"

[dependencies]
bytes = "0.5"
nom = "5.1"
bitflags = "1.2"
toml = "0.5.6"
serde = { version = "1.0", features = ["derive"] }
config = "0.9"
log = "0.4"
env_logger = "0.7.1"
tokio = { version = "0.2", features = ["full"] }
warp = "0.2"
futures = "0.3"
tokio-util = { version = "0.2.0", features = ["udp", "codec"] }

[dev-dependencies]
testcontainers = "0.11"
spectral = "0.6.0"
pretty_env_logger = "0.4"
tempfile = "3.1"
trust-dns-client = "0.19.6"
hyper = "0.13.9"

[lib]
name = "koppeln"
path = "src/lib.rs"
