[package]
name = "e2e-tests"
version = "0.1.0"
edition = '2021'

[lib]
name = "test_helper"
path = "src/lib.rs"

[dependencies]
nom = "6.1.2"
indoc = "1.0.3"
reqwest = { version = "0.11", features = ["blocking", "json"] }
thiserror = "1.0"
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0"
names = { version = "0.12.0", default-features = false }
