[package]
name = "e2e_tests"
version = "0.1.0"
edition = '2021'

[lib]
name = "test_helper"
path = "src/lib.rs"

[dependencies]
nom = "6.1.2"
indoc = "1.0.3"

[dev-dependencies]
reqwest = { version = "0.11.9", features = ["blocking", "json"] }
lxc_testcontainers = { path = "../lxc_testcontainers" }

