[package]
name = "lxc_testcontainers"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0"
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0"
names = { version = "0.12.0", default-features = false }
